# TGXngine

./: .clang-format  .clang-tidy  .clangd  .gersemirc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  build.py  check_commented_code.py  lint_functions.py
.github/workflows/: build_and_publish.yml  build_linux.yml  check_formatting.yml  unit_tests.yml
Resources/: game.json  intro.json  level-one-obstruction.json  level-one.json  maps.json  modules.json  settings.json  sidebar.json
Source/include/common/: AssetState.h  Cells.h  CollisionStructures.h  Common.hpp  Config.h  Core.h  Debug.h  EconomyInstance.h  Enums.h  Flags.h  Globals.h  GridTracker.h  ImageLoader.cpp  ImageLoader.h  Instance.h  ItemInstance.h  ItemPair.h  ItemStates.h  Logs.h  Lookup.h  Navigation.h  NavigationStructures.h  NextStep.h  Orders.h  PassableGrid.h  Payload.h  Physics.cpp  Physics.h  PhysicsDefinitions.h  Point.h  ProjectileInstance.h  ResourceInstance.h  StringUtils.hpp  TargetState.h  Updater.h  Utils.hpp  Window.cpp  Window.h  WorldState.cpp  WorldState.h  (+2 more)
Source/modules/: .clang-tidy
Source/modules/AI/: AI.cpp  AI.h  AIData.h  AIStates.h  BuilderAIState.cpp  PlexAIState.cpp
Source/modules/Buildings/: BuildingStates.h  Buildings.cpp  Buildings.h
Source/modules/Economy/: Economy.cpp  Economy.h  EconomyStates.h
Source/modules/Infantry/: Infantry.cpp  Infantry.h  InfantryStates.h
Source/modules/Interface/: Interface.cpp  Sidebar.cpp  Sidebar.h  SidebarButton.cpp  SidebarButton.h
Source/modules/Projectiles/: Projectile.cpp  Projectile.h  ProjectileStates.h
Source/modules/Resources/: Resources.cpp  Resources.h  ResourcesStates.h
Source/modules/Triggers/: Trigger.cpp  Trigger.h  Triggers.cpp  Triggers.h
Source/modules/Vehicles/: VehicleStates.h  Vehicles.cpp  Vehicles.h
Source/src/: AI.cpp  AI.h  Asset.cpp  Asset.h  Controller.cpp  Controller.h  Economy.cpp  Economy.h  Interface.cpp  Interface.h  Item.cpp  Item.h  Keyboard.cpp  Keyboard.h  Main.cpp  Mouse.cpp  Mouse.h  Projectile.cpp  Projectile.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  Settings.cpp  Settings.h  Triggers.cpp  Triggers.h
Source/src/Audio/: Music.cpp  Music.h
Source/src/Background/: Background.cpp  Background.h
Source/src/Grid/: Grid.cpp  Grid.h
Source/src/Scene/: Game.cpp  Game.h  Intro.cpp  Intro.h  Scene.h
Source/src/UI/: Button.h  GraphicalButton.cpp  GraphicalButton.h  TextButton.cpp  TextButton.h
Source/src/WayPoints/: WayPoints.cpp  WayPoints.h
Source/src/io/: Loader.cpp  Loader.h
Source/tests/: UnitTests.cpp
Source/tests/test_common/: TestCommon.hpp  TestHeuristic.hpp  TestStringUtils.hpp  TestTree.hpp  TestUtils.hpp
Source/tests/test_library/: TestCollision.hpp
